规范化日志，注释掉下载逻辑，输出下载地址记录到本地文件中